# picoagent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml
defaults/agents/: researcher.md  reviewer.md
defaults/skills/: coding.md  writing.md
docs/: INDEX.md  architecture.md  artifacts.md  configuration.md  design-choices.md  entrypoints.md  golden-principles.md  memory.md  runtime-model.md  source-map.md  todo-unified-command-surface.md
docs/adr/: 0001-durable-messages-transient-stream-deltas.md  0002-compile-time-prompt-assets-and-tool-ownership.md  0003-append-only-local-compaction-and-history-retrieval.md  0004-stable-agent-prefix-and-core-history-tools.md  0005-openai-chat-compatible-message-log.md  0006-complete-message-resume-and-durable-child-coordination.md  (+44 more)
prompts/: README.md  agents.yaml
src/: AGENTS.md  artifact.rs  cli.rs  config.rs  events.rs  hooks.rs  lib.rs  main.rs  main.ts  mcp.rs  memory.rs  prompts.rs  server.ts  trajectory.rs
src/acp/: AGENTS.md  (+3 more)
tests/: active_handle_compaction_race.rs  active_handle_reminder.rs  active_task_compaction_race.rs  active_task_reminder.rs  active_task_reminder_resume.rs  agent_runner.rs  artifact.rs  compaction.rs  compaction_trajectory.rs  delegate_context.rs  delegate_recovery.rs  direct_tool_batch.rs  extensions.rs  inspect_cli.rs  mcp_cli.rs  message_log.rs  message_log_recovery.rs  model_start_events.rs  profile_stability.rs  provider_timeouts.rs  providers.rs  reasoning_trajectory.rs  storage.rs  tools.rs
(+349 files in other folders)
