[package]
name = "fiasco"
version = "0.1.0"
edition = "2024"
description = "A headless orchestrator for multiple agents and background jobs"
repository = "https://github.com/siriusctrl/fiasco"
homepage = "https://siriusctrl.github.io/projects/fiasco/"

[[bin]]
name = "fiasco"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
eventsource-stream = "0.2"
futures-util = "0.3"
fmtview = "0.6.1"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "png"] }
libc = "0.2"
regex = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
rmcp = { version = "2.2.0", features = ["client", "transport-child-process", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
sha2 = "0.10"
shell-words = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ulid = { version = "1", features = ["serde"] }
url = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = "thin"
strip = "symbols"
